<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.atp</groupId>
	<artifactId>CoffeeApplication</artifactId>
	<version>1.0</version>
	<name>CoffeeApplication</name>
	<description>CoffeeApplication</description>

	<properties>
		<maven.compiler.target>1.8</maven.compiler.target>
		<maven.compiler.source>1.8</maven.compiler.source>
	</properties>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<dependencies>
		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>8.0.32</version>
		</dependency>

		<!--
		https://mvnrepository.com/artifact/org.netbeans.external/AbsoluteLayout -->
		<dependency>
			<groupId>org.netbeans.external</groupId>
			<artifactId>AbsoluteLayout</artifactId>
			<version>RELEASE200</version>
		</dependency>

		<dependency>
			<groupId>net.java.dev.timingframework</groupId>
			<artifactId>timingframework</artifactId>
			<version>1.0</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.5.0-b01</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.miglayout/miglayout-swing -->
		<dependency>
			<groupId>com.miglayout</groupId>
			<artifactId>miglayout-swing</artifactId>
			<version>4.2</version>
		</dependency>
		
		<dependency>
           <groupId>org.apache.pivot</groupId>
           <artifactId>pivot-charts</artifactId>
           <version>2.0.5</version>
        </dependency>
        
        <dependency>
           <groupId>org.jfree</groupId>
           <artifactId>jfreechart</artifactId>
           <version>1.5.4</version>
        </dependency>
        
       <dependency>
           <groupId>org.swinglabs.swingx</groupId>
           <artifactId>swingx-autocomplete</artifactId>
           <version>1.6.5-1</version>
           </dependency>

	</dependencies>
	
	
    
</project>